tests/correct/simpleFor.py
for x in [0, 1, 2]:
  print 1
