tests/error/test-bad-for1.py
for x+1 in 1, 2:
       print x
